# async-graphql-urql

./: Cargo.toml
my-app/: package-lock.json  package.json
my-app/src/routes/: index.svelte
src/: main.rs
