[package]
name = "async-graphql-urql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-graphql-tide = "3.0.28"
async-graphql = { version = "3.0.28", features = [ "apollo_persisted_queries" ] }
tide = "0.16"
tide-tracing = "0.0.11"
tracing-subscriber = "0.3.9"
tracing = "0.1.32"
